<resources>
    <string name="app_name">BLE通用工具</string>
    <string name="ble_mode_balanced">平衡模式</string>
    <string name="ble_mode_low_latency">低延时模式</string>
    <string name="ble_mode_low_power">低功耗模式</string>
    <string name="callback_type_all_matches">全部匹配</string>
    <string name="starts_name">匹配开头</string>
    <string name="full_name">匹配全名</string>
    <string name="string">字符串</string>
    <string name="hex">十六进制</string>
    <string name="read_data">读取数据</string>
    <string name="write_data">写入数据</string>
    <string name="enable_notify">开启通知接收</string>
    <string name="connect_device">连接设备</string>
    <string name="view_scan_record">查看广播包</string>
    <string name="begin_reliable_write">开启可靠数据写入模式</string>
    <string name="abort_reliable_write">取消可靠数据写入模式</string>
    <string name="read_rssi">读取RSSI</string>
    <string name="set_mtu">设置MTU</string>
    <string name="read_phy">读取当前连接的物理层</string>
    <string name="change_phy">更改连接物理层</string>
    <string name="copy_service_uuid">复制服务UUID</string>
    <string name="copy_service_data">复制服务数据</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="copy_all_ad_struct_data">复制整个AD结构</string>
    <string name="copy_ad_data_only">仅复制数据部分</string>
    <string name="ble_phy_option_no_preferred">不设置偏好</string>
    <string name="ble_phy_option_s2">物理层偏好 S=2</string>
    <string name="ble_phy_option_s8">物理层偏好 S=8</string>
    <string name="no_permission_dialog_title">没有权限</string>
    <string name="no_permission_dialog_msg">没有权限，请前往设置界面开启权限\n %1$s</string>
    <string name="need_permissions">存储读写权限\nandroid 6.0需要定位权限\nandroid 12需要连接附近的设备权限\n相机权限(用于扫码)</string>
    <string name="go_settings">去设置</string>
    <string name="cancel">取消</string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="start_scan_failed">扫描失败</string>
    <string name="stop_scan_failed">停止失败</string>
    <string name="scan_and_connect">扫描与连接</string>
    <string name="device_scan_title">设备扫描</string>
    <string name="NA">N/A</string>
    <string name="menu_set_ble_scan_mode">设置扫描模式</string>
    <string name="set_ble_scan_mode_dialog_title">设置扫描模式</string>
    <string name="ble_match_mode_not_support_with_low_system_version">匹配模式需要安卓6.0系统支持</string>
    <string name="menu_set_ble_match_mode">设置匹配模式</string>
    <string name="set_ble_match_mode_dialog_title">设置匹配模式</string>
    <string name="menu_set_ble_callback_type">设置回调类型</string>
    <string name="ble_callback_type_not_support_with_low_system_version">回调类型需要安卓6.0系统支持</string>
    <string name="set_ble_callback_type_dialog_title">设置回调类型</string>
    <string name="ble_scan_phy_not_support_with_low_system_version">设置扫描物理层需要安卓8.0</string>
    <string name="set_ble_scan_phy_dialog_title">设置扫描物理层</string>
    <string name="menu_set_ble_report_delay">扫描结果反馈延时时间</string>
    <string name="set_ble_report_delay_dialog_title">设置扫描反馈延时时间</string>
    <string name="scan_report_delay_colon">扫描反馈延时时间(ms)：</string>
    <string name="please_type_scan_report_delay">请输入扫描反馈延时，单位：ms</string>
    <string name="confirm">确认</string>
    <string name="menu_set_ble_scan_phy">设置扫描物理层</string>
    <string name="menu_set_ble_scan_period">设置扫描时长</string>
    <string name="scan_timeout_colon">扫描时长(ms)：</string>
    <string name="please_type_scan_timeout">请输入扫描时长</string>
    <string name="set_ble_scan_timeout_dialog_title">设置扫描时长</string>
    <string name="data_invalid">数据无效</string>
    <string name="data_empty">空数据</string>
    <string name="scan_timeout_hint">输入任意负数可一直扫描，直到手动停止</string>
    <string name="menu_name_filter">名称过滤</string>
    <string name="name_filter_dialog_title">名称过滤</string>
    <string name="set_starts_name_filter">设置名称过滤-开头匹配</string>
    <string name="added_filter">已添加的过滤条件</string>
    <string name="add_new_filter">添加过滤</string>
    <string name="clear_filter">清空过滤</string>
    <string name="filter_starts_name_colon">开头名称：</string>
    <string name="please_type_filter_start_name">请输入设备名称开头</string>
    <string name="cleared">已清空</string>
    <string name="added">已添加</string>
    <string name="set_full_name_filter">设置名称过滤-完全匹配</string>
    <string name="filter_full_name_colon">设备全名：</string>
    <string name="please_type_filter_full_name">请输入设备全名</string>
    <string name="delete_filter_dialog_title">删除过滤条件</string>
    <string name="delete_filter_dialog_msg">将会删除过滤条件 -&gt;%1$s&lt;-，是否确认？</string>
    <string name="deleted">已删除</string>
    <string name="menu_mac_address_filter">MAC地址过滤</string>
    <string name="mac_address_filter_dialog_title">MAC地址过滤</string>
    <string name="set_starts_mac_filter">MAC地址过滤-匹配开头</string>
    <string name="filter_starts_mac_colon">地址开头:</string>
    <string name="please_type_filter_start_mac">请输入设备地址开头</string>
    <string name="filter_full_mac_colon">MAC地址全地址：</string>
    <string name="please_type_filter_full_mac">请输入设备MAC地址</string>
    <string name="starts_address">匹配地址开头</string>
    <string name="full_address">匹配全地址</string>
    <string name="set_fll_mac_filter">MAc地址过滤-完全匹配</string>
    <string name="menu_clear_all_filter">清空全部过滤条件</string>
    <string name="device_name_colon">设备名称：</string>
    <string name="device_address_colon">设备MAC地址：</string>
    <string name="set_connect_param_hint">可点击右上角菜单更改连接参数</string>
    <string name="connecting">正在连接</string>
    <string name="disconnect_device">断开设备</string>
    <string name="wrong_gatt_err">GATT出现错误，错误码%1$d</string>
    <string name="null_">null</string>
    <string name="can_read">R</string>
    <string name="can_write">W</string>
    <string name="can_notify">N</string>
    <string name="no_characteristic">此服务下没有可用的特征</string>
    <string name="indicator_light_hint_title">状态指示颜色说明</string>
    <string name="indicator_light_hint_content">红色-断开连接或未执行连接\n黄色-正在连接\n蓝色-已连接到设备\n绿色-服务发现成功(真正完成连接)\n品红-出现异常</string>
    <string name="characteristic_hint_title">特征属性说明</string>
    <string name="characteristic_hint_content">R:可读 W:可写 N:支持通知</string>
    <string name="please_select_operate_dialog_title">请选择操作</string>
    <string name="characteristic_can_not_read">此特征不可读</string>
    <string name="characteristic_read_failed">特征数据读取失败</string>
    <string name="read_data_result_dialog_title">读取数据结果</string>
    <string name="characteristic_can_not_write">此特征不可写</string>
    <string name="copy_string_content">复制字符串内容</string>
    <string name="string_copied">字符串已复制</string>
    <string name="copy_hex_content">复制十六进制内容</string>
    <string name="hex_copied">十六进制已复制</string>
    <string name="write_data_dialog_title">写入数据</string>
    <string name="data_type_colon">数据类型：</string>
    <string name="data_content_colon">数据内容：</string>
    <string name="please_type_data_content">请输入数据内容</string>
    <string name="write_data_result_dialog_title">写入数据结果</string>
    <string name="characteristic_can_not_notify">此特征不支持通知</string>
    <string name="characteristic_write_failed">特征数据写入失败</string>
    <string name="characteristic_notify_enable_failed">特征通知打开失败</string>
    <string name="notify_data_dialog_title">通知数据</string>
    <string name="characteristic_notify_enable_succeed">通知打开成功</string>
    <string name="device_options_dialog_title">设备操作选项</string>
    <string name="source_scan_record">原始广播包</string>
    <string name="copy_scan_record">复制广播包</string>
    <string name="scan_record_copied">广播包已复制</string>
    <string name="ad_struct_split">AD结构拆分</string>
    <string name="menu_use_legacy">只返回旧版广播包</string>
    <string name="use_legacy_dialog_title">使用旧版广播包</string>
    <string name="legacy_not_support_with_low_system_version">使用旧版广播包需要安卓8.0</string>
    <string name="data_length">长度</string>
    <string name="ad_type">类型</string>
    <string name="ad_data">内容</string>
    <string name="service_info">服务信息</string>
    <string name="uuid_colon">UUID：</string>
    <string name="data_colon">数据：</string>
    <string name="ad_flag_colon">广播标志：</string>
    <string name="tx_power_colon">Tx_power：</string>
    <string name="menu_auto_reconnect">自动重连</string>
    <string name="auto_reconnect_dialog_title">自动重连</string>
    <string name="menu_ble_connect_transport">GATT传输层</string>
    <string name="ble_reconnect_transport_dialog_title">GATT传输层</string>
    <string name="ble_connect_transport_not_support_with_low_system_version">设置GATT传输层需要安卓6.0</string>
    <string name="menu_ble_connect_phy_mask">BLE物理层</string>
    <string name="ble_connect_phy_mask_not_support_with_low_system_version">BLE物理层选择需要安卓8.0</string>
    <string name="ble_connect_phy_mask_dialog_title">BLE物理层</string>
    <string name="scan_list_hit">长按搜索到的设备列表显示更多操作\n右上角可设置更多搜索参数\n点击底部按钮开始/停止扫描</string>
    <string name="phy_le_coded_mask_not_support">此设备不支持LE CODED</string>
    <string name="ad_struct_options_dialog_title">AD结构操作选项</string>
    <string name="ad_struct_copied">AD结构已复制</string>
    <string name="ad_data_copied">AD数据已复制</string>
    <string name="service_data_options_dialog_title">服务数据操作选项</string>
    <string name="service_uuid_copied">服务UUID已复制</string>
    <string name="service_data_copied">服务数据已复制</string>
    <string name="auto_reconnect_colon">自动重连:</string>
    <string name="ble_connect_transport_colon">GATT传输层:</string>
    <string name="ble_connect_phy_mask_colon">GATT物理层:</string>
    <string name="no_descriptor">此特征下没有可用的描述</string>
    <string name="discover_services_failed">发现服务失败</string>
    <string name="connect_state_err">连接状态错误%1$d</string>
    <string name="connected">已连接</string>
    <string name="connect_timeout">连接超时</string>
    <string name="descriptor_read_failed">描述读取失败</string>
    <string name="descriptor_can_not_read">此描述不可读</string>
    <string name="descriptor_write_failed">描述写入失败</string>
    <string name="descriptor_can_not_write">此描述不可写</string>
    <string name="characteristic_option_hint_content">如果特征下有描述信息,可长按特征进行操作</string>
    <string name="menu_ble_connect_timeout">连接超时设置</string>
    <string name="set_ble_connect_timeout_dialog_title">连接超时设置</string>
    <string name="connect_timeout_colon">超时时间(ms):</string>
    <string name="please_type_connect_timeout">请输入超时时间</string>
    <string name="menu_ble_additional_options">更多选项</string>
    <string name="additional_options_need_connect_after">更多选项功能需要在设备连接后使用</string>
    <string name="additional_options_dialog_title">更多选项</string>
    <string name="reliable_write_data_result_dialog_title">可靠数据写入</string>
    <string name="already_in_reliable_write_mode">当前已是可靠数据写入模式</string>
    <string name="reliable_write_mode_begin_failed">可靠数据写入模式开启失败</string>
    <string name="commit">提交数据</string>
    <string name="reliable_data_write_failed">可靠数据写入失败</string>
    <string name="cancel_write">取消写入</string>
    <string name="reliable_data_cancel_write_failed">可靠数据写入取消失败</string>
    <string name="canceled">已取消</string>
    <string name="continue_write">继续写入</string>
    <string name="reliable_data_write_succeed">可靠数据写入成功</string>
    <string name="not_in_reliable_write_mode">未启用可靠数据传输，无需取消</string>
    <string name="read_rssi_failed">RSSI读取失败</string>
    <string name="change_mtu">更改MTU(单包数据最大值)</string>
    <string name="mtu_colon">MTU：</string>
    <string name="please_type_mtu">请输入MTU</string>
    <string name="request_mtu_failed">MTU更改失败</string>
    <string name="mtu_changed">MTU已变更,当前可用%1$d</string>
    <string name="read_phy_not_support_with_low_system_version">读取物理层需要安卓8.0</string>
    <string name="read_phy_failed">读取物理层失败</string>
    <string name="read_phy_result_dialog_title">读取物理层信息结果</string>
    <string name="phy_read_result">物理层信息\n发送层：%1$s\n接收层：%2$s</string>
    <string name="change_phy_not_support_with_low_system_version">更改连接物理层需要安卓8.0</string>
    <string name="change_phy_dialog_title">更改连接物理层</string>
    <string name="tx_phy_colon">数据发送物理层：</string>
    <string name="rx_phy_colon">数据接收物理层：</string>
    <string name="phy_options_colon">物理层选项：</string>
    <string name="scan_code_connect">扫码连接</string>
</resources>