<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/set_ble_scan_mode"
        android:title="@string/menu_set_ble_scan_mode" />
    <item
        android:id="@+id/set_ble_match_mode"
        android:title="@string/menu_set_ble_match_mode" />
    <item
        android:id="@+id/set_ble_callback_type"
        android:title="@string/menu_set_ble_callback_type" />
    <item
        android:id="@+id/set_ble_report_delay"
        android:title="@string/menu_set_ble_report_delay" />
    <item
        android:id="@+id/set_ble_scan_phy"
        android:title="@string/menu_set_ble_scan_phy" />
    <item
        android:id="@+id/set_ble_scan_timeout"
        android:title="@string/menu_set_ble_scan_period" />
    <item
        android:id="@+id/name_filter"
        android:title="@string/menu_name_filter" />
    <item
        android:id="@+id/mac_address_filter"
        android:title="@string/menu_mac_address_filter" />
    <item
        android:id="@+id/clear_all_filter"
        android:title="@string/menu_clear_all_filter" />
    <item
        android:id="@+id/use_legacy"
        android:title="@string/menu_use_legacy" />

    <item
        android:id="@+id/scan_code"
        android:title="@string/scan_code_connect"/>
</menu>