<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/dialog_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_fll_mac_filter"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_filter" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_filter_list_rv"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/add_new_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_new_filter" />

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_filter" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>
</layout>