<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/dialog_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_phy_dialog_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tx_phy_colon" />

                <com.sscl.baselibrary.widget.ReSpinner
                    android:id="@+id/tx_phy_rsp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/ble_connect_phy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rx_phy_colon" />

                <com.sscl.baselibrary.widget.ReSpinner
                    android:id="@+id/rx_phy_rsp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/ble_connect_phy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phy_options_colon" />

                <com.sscl.baselibrary.widget.ReSpinner
                    android:id="@+id/phy_options_rsp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/phy_options" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/confirm_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>